tests/NormalTests/paczka1/small_fuzzy/72494343.err
Error in line 9: yHE S440 66,89
Error in line 3: 21UF3aGY A725 47,3
Error in line 7: A725 A725 91,7
